# LiteML

./: .gitignore  AGENTS.md  MEMORY.md  README.md  SYNTAX.md  TODO.md  liteml.py  pyproject.toml
components/accordion/: component.json  script.js  style.css  template.html
components/back-to-top/: component.json  script.js  style.css  template.html
components/breadcrumb/: component.json  style.css  template.html
components/card/: component.json  style.css  template.html
components/carousel/: component.json  script.js  style.css  template.html
components/container/: component.json  style.css  template.html
components/dark-mode-toggle/: component.json  script.js  style.css  template.html
components/hero-section/: component.json  style.css  template.html
components/lazy-image/: component.json  script.js  style.css  template.html
components/modal-dialog/: component.json  script.js  style.css  template.html
components/navbar/: component.json  script.js  style.css  template.html
components/pagination/: component.json  style.css  template.html
components/sidebar-layout/: component.json  style.css  template.html
core/: __init__.py  cli.py  compiler.py  constants.py  directive_macros.py  directives.py  parser.py  tui.py
docs/: AGENTS.md  SYNTAX.md  syntax-cn.md  syntax-en.md
prompts/: decompile-prompt.md  usage-prompt.md
tests/: test.html  test.lite  test_full.html  test_full.lite  test_php.lite  test_php.php  test_use.html  test_use.lite
website/: history.html  history.lite  index.html  index.lite  style.css  syntax.html  syntax.lite
(+60 files in other folders)
