[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liteml"
dynamic = ["version"]
description = "轻量级 HTML/PHP 模板语言编译器"
readme = "README.md"
authors = [
    {name = "Zhao-Shengyi"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Zhao-Shengyi/LiteML"

[project.scripts]
liteml = "core.cli:main"

[project.optional-dependencies]
textual = ["textual>=8.2.8"]

[tool.setuptools.dynamic]
version = {attr = "core.__version__"}

[tool.setuptools.packages.find]
include = ["core", "core.*"]
